--- a/authenticationUe4Source/Config/DefaultGame.ini
+++ b/authenticationUe4Source/Config/DefaultGame.ini
@@ -1,3 +1,41 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=2B2783784F1C6AB4AFBA10A08218158D
 ProjectName=Third Person Game Template
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+Build=IfProjectHasCode
+BuildConfiguration=PPBC_Development
+StagingDirectory=(Path="D:/")
+FullRebuild=False
+ForDistribution=False
+IncludeDebugFiles=False
+BlueprintNativizationMethod=Disabled
+bIncludeNativizedAssetsInProjectGeneration=False
+bExcludeMonolithicEngineHeadersInNativizedCode=False
+UsePakFile=True
+bGenerateChunks=False
+bGenerateNoChunks=False
+bChunkHardReferencesOnly=False
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path="")
+HttpChunkInstallDataVersion=
+IncludePrerequisites=True
+IncludeAppLocalPrerequisites=False
+bShareMaterialShaderCode=False
+bSharedMaterialNativeLibraries=False
+ApplocalPrerequisitesDirectory=(Path="")
+IncludeCrashReporter=False
+InternationalizationPreset=English
+-CulturesToStage=en
++CulturesToStage=en
+bCookAll=False
+bCookMapsOnly=False
+bCompressed=False
+bEncryptIniFiles=False
+bEncryptPakIndex=False
+bSkipEditorContent=False
+bSkipMovies=False
+bNativizeBlueprintAssets=False
+bNativizeOnlySelectedBlueprints=False
+
+
