--- a/authenticationUe4Source/Config/DefaultEngine.ini
+++ b/authenticationUe4Source/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/Level_Login.Level_Login
 EditorStartupMap=/Game/Maps/Level_Login.Level_Login
-GlobalDefaultGameMode=/Game/Blueprints/DefaultSetting/GameMode_Login.GameMode_Login_C
+GlobalDefaultGameMode=/Game/Blueprints/DefaultSetting/Game/GameMode_Game.GameMode_Game_C
 ServerDefaultMap=/Game/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
 GameInstanceClass=/Game/Blueprints/DefaultSetting/GameInstance_Login.GameInstance_Login_C
 
@@ -151,5 +151,4 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
 
