add loading screen

--- a/authenticationUe4Source/Config/DefaultGame.ini
+++ b/authenticationUe4Source/Config/DefaultGame.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=2B2783784F1C6AB4AFBA10A08218158D
-ProjectName=Third Person Game Template
+ProjectName=Phantom World Online
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
@@ -37,5 +37,4 @@ bSkipEditorContent=False
 bSkipMovies=False
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
-
 
