--- a/authenticationUe4Source/Config/DefaultEngine.ini
+++ b/authenticationUe4Source/Config/DefaultEngine.ini
@@ -1,9 +1,10 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/Level_Login.Level_Login
 EditorStartupMap=/Game/Maps/Level_Login.Level_Login
-GlobalDefaultGameMode=/Game/Blueprints/DefaultSetting/Game/GameMode_Game.GameMode_Game_C
+GlobalDefaultGameMode=/Game/Blueprints/DefaultSetting/Login/GameMode_Login.GameMode_Login_C
 ServerDefaultMap=/Game/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
 GameInstanceClass=/Game/Blueprints/DefaultSetting/GameInstance_Login.GameInstance_Login_C
+TransitionMap=/Game/Maps/Level_Transition.Level_Transition
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_9
