--- a/authenticationUe4Source/Config/DefaultEngine.ini
+++ b/authenticationUe4Source/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameDefaultMap=/Game/Maps/Level_Login.Level_Login
 EditorStartupMap=/Game/Maps/Level_Login.Level_Login
 GlobalDefaultGameMode=/Game/Blueprints/DefaultSetting/Login/GameMode_Login.GameMode_Login_C
 ServerDefaultMap=/Game/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
-GameInstanceClass=/Script/authenticationUe4.CGameInstance_Login
+GameInstanceClass=/Game/Blueprints/DefaultSetting/GameInstance_Login.GameInstance_Login_C
 TransitionMap=/Game/Maps/Level_Transition.Level_Transition
 GlobalDefaultServerGameMode=/Game/Blueprints/DefaultSetting/Game/GameMode_Game.GameMode_Game_C
 
@@ -153,3 +153,4 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
+
