Настроил с++ классы , работу с json , получение данных с сервера, базовые реплекации, инициализация контроллера и павна

--- a/authenticationUe4Source/Config/DefaultEngine.ini
+++ b/authenticationUe4Source/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameDefaultMap=/Game/Maps/Level_Login.Level_Login
 EditorStartupMap=/Game/Maps/Level_Login.Level_Login
 GlobalDefaultGameMode=/Game/Blueprints/DefaultSetting/Login/GameMode_Login.GameMode_Login_C
 ServerDefaultMap=/Game/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
-GameInstanceClass=/Game/Blueprints/DefaultSetting/GameInstance_Login.GameInstance_Login_C
+GameInstanceClass=/Game/Blueprints/DefaultSetting/Game/cplus/MyCGameInstance_Login.MyCGameInstance_Login_C
 TransitionMap=/Game/Maps/Level_Transition.Level_Transition
 GlobalDefaultServerGameMode=/Game/Blueprints/DefaultSetting/Game/GameMode_Game.GameMode_Game_C
 
