--- a/authenticationUe4Source/Config/DefaultEngine.ini
+++ b/authenticationUe4Source/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ TransitionMap=/Game/Maps/Level_Transition.Level_Transition
 GlobalDefaultServerGameMode=/Game/Blueprints/DefaultSetting/Game/GameMode_Game.GameMode_Game_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
-MinimumiOSVersion=IOS_11
+MinimumiOSVersion=IOS_9
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/authenticationUe4")
@@ -153,3 +153,4 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
+
